--- a/index.html
+++ b/index.html
@@ -416,7 +416,13 @@
           </div>
 
           <div class="actions">
-            <a class="btn secondary" id="mapsBtn" href="#" target="_blank" rel="noopener">📍 Open Location</a>
+            <a class="btn secondary"
+   href="https://maps.app.goo.gl/mgvuTRHKwTvjFSRK8"
+   target="_blank"
+   rel="noopener">
+   📍 Open Location
+</a>
+
             <a class="btn" href="#programme">✨ See Events</a>
           </div>
 
