--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         <div class="card">
           <div class="row">
             <div class="label">Venue</div>
-            <div class="value">Wani House</div>
+            <div class="value">Wani Residency</div>
           </div>
           <div class="row">
             <div class="label">Address</div>
