--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
           <h1>We request the honour of your presence</h1>
 
           <p class="sub">
-            With hearts full of gratitude to Almighty Allah, <br>Mr. &amp; Mrs. Qari Ali Mohammad Wani</b>
+            With hearts full of gratitude to Almighty Allah, <br> <b>Mr. &amp; Mrs. Qari Ali Mohammad Wani</b>
             request the honour of your presence and blessings at the wedding of their beloved <b>Daughter</b> and <b>Son</b>.
           </p>
 
