--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
           <p class="sub">
             With hearts full of gratitude to Almighty Allah, <br> <b>Mr. &amp; Mrs. Qari Ali Mohammad Wani</b>
-            request the honour of your presence and blessings at the wedding of their beloved <b>Daughter</b> and <b>Son</b>.
+            request the honour of your presence and blessings at the wedding of their beloved <br> <b>Daughter</b> and <b>Son</b>.
           </p>
 
           <div class="countdown" id="countdown" aria-label="Countdown to Walima">
