--- a/index.html
+++ b/index.html
@@ -406,10 +406,11 @@
 
           <h1>We request the honour of your presence</h1>
 
-          <p class="sub">
+                   <p class="sub">
             With hearts full of gratitude to Almighty Allah, <br> <b>Mr. &amp; Mrs. Qari Ali Mohammad Wani</b>
-            request the honour of your presence and blessings at the wedding of their beloved <br> <b>Daughter</b> and <b>Son</b>.
+            request the honour of your presence and blessings at the wedding of their beloved</br> <b>Daughter</b> and <b>Son</b>.
           </p>
+
 
           <div class="countdown" id="countdown" aria-label="Countdown to Walima">
             <div class="cd"><b id="d">—</b><span>Days</span></div>
